--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-neumorphism": "^0.1.5",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
